# backend-interview

./: .angular-cli.json  .dockerignore  .env  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  .prettierrc.json  .xo-config.json  Dockerfile  HOW-TO.md  LICENSE  LICENSE.md  PatientScorer.js  README.md  RankGenerator.js  app.js  app.py  babel.config.cjs  calculateScore.js  docker-compose.yml  esbuild.config.js  eslint.config.js  eslint.config.mjs  example.js  generateBaseline.js  generateCallList.js  generate_data.js  generate_data.py  index.html  index.js  io  jest-integration-config.js  jest-unit-config.js  jest.config.e2e.js  jest.config.js  jest.config.mjs  luma_health.py  mfREADME.txt  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit  pre-push
__tests__/: NormalizationService.spec.js  RecommendationService.spec.js  patient.test.js  patientRecommender.spec.js  utils.spec.js
api/: routes.js
code/: data_exploration.py  factory.py  sample_request.py  scoring.py  scoring_test.py  server.py  server_test.py
config/: constants.js
controllers/: MainController.js  patient.js
data/: generate_data.js  linearRegression.js  patients.json  trainingPatients.json
documentation/: DATABASE_CONNECTION_DATA.txt  GET_DISTANCE_CALC.sql  SCORE_CALC.sql
e2e/: app.e2e-spec.ts
env/: index.js
example/: index.js
helper/: geo.js  score.js
js/: getMostLikelyPatients.js  linear-regression.js  main.js
lib/: LICENSE-MIT  README.md  distance.js  index.js  package-lock.json  package.json  patient-ranking.js  patient-ranking.test.js
models/: patient.js  (+3 more)
(+475 files in other folders)
