[tool.poetry]
name = "patient_sorting"
version = "0.1.0"
description = "Provides sorting of patients by liklihood of accepting an open appointment slot."
authors = ["Chad Horohoe <chad@anyonecanedit.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
faker = "^3.0.0"
flask = "^1.1.1"
geopy = "^1.20.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = "^5.0.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
